# valence-screens

./: .gitignore  Cargo.toml  LICENSE
src/: buffer.rs  game_manager.rs  image.rs  input.rs  lib.rs  main.rs  manager.rs  pixel.rs  screen.rs  static_game_manager.rs
src/game_manager/: default_game_manager.rs  matrix_generator.rs  rainbow_generator.rs
src/manager/: matrix_game_manager.rs  paint_game_manager.rs  rainbow_game_manager.rs  snake_game_manager.rs
src/screen/: buffer.rs  game_manager.rs  input.rs  pixel.rs
src/static_game_manager/: matrix_generator.rs  rainbow_generator.rs  snake_generator.rs
